fix avatar positioning on mobile

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -24,7 +24,7 @@ h1, h2, h3, h4, h5, h6, .site-title {
 
 .author__avatar-img {
   position: absolute;
-  top: 5rem;
+  top: 8rem;
   right: 1rem;
   width: 100%;
   max-width: 6rem;
